[gd_scene load_steps=4 format=3 uid="uid://qq550hkhxfvi"]

[ext_resource type="Script" path="res://gator.gd" id="1_fmx05"]
[ext_resource type="Texture2D" uid="uid://bjv48pp4p6vwl" path="res://Assets/gator.png" id="2_vmsdy"]

[sub_resource type="CircleShape2D" id="CircleShape2D_1xavu"]
radius = 410.148

[node name="Gator" type="Node2D"]
script = ExtResource("1_fmx05")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_1xavu")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="Cooldown" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0.999998, 3)
scale = Vector2(1.12, 1.152)
texture = ExtResource("2_vmsdy")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Cooldown" to="." method="_on_cooldown_timeout"]
